# deduper

./: .gitignore  HISTORY.md  LICENSE  Makefile  README.md  make.bat  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: build-posit.yml  dev-enviro.yml  test.yml
src/deduper/: dedupe.py
src/deduper/app/: __init__.py  app.py  constants.py  deploy.py  icons.py
src/pyscaffold/: __init__.py  cli.py  work.py
tests/: test_dedupe.py  test_work.py
