[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyscaffold"
authors = [{name = "My pyscaffold", email = "pyscaffold@email.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.12"
license = { file="LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Private :: Do Not Upload",
]
dependencies = [
  "typer",
]

[project.optional-dependencies]
dev = [
  "flit~=3.9.0",
  "coverage~=7.3.2",
  "pytest~=7.4.2",
  "ruff~=0.1.3",
]

[project.urls]
Home = "https://github.com/shapiromatron/pyscaffold"
Changes = "https://github.com/shapiromatron/pyscaffold/blob/main/HISTORY.md"
"Issue Tracker" = "https://github.com/shapiromatron/pyscaffold/issues"

[project.scripts]
pyscaffold = "pyscaffold.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
ignore = ["E501", "B904", "B007", "S308", "S113", "S314"]
unfixable = ["F401", "F841"]

[tool.ruff.isort]
known-first-party = ["pyscaffold"]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[tool.coverage.run]
omit = [
  "./build/",
  "./tests/*",
  "./venv/*"
]
