[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deduper"
authors = [{name = "Daniel Rabstejnek", email = "rabstejnek@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Private :: Do Not Upload",
]
dependencies = [
  "rapidfuzz",
]

[project.optional-dependencies]
dev = [
  "flit~=3.9.0",
  "coverage~=7.3.2",
  "pytest~=7.4.2",
  "ruff~=0.1.3",
]
app = [
  "shiny",
  "rispy",
  "pandas",
  "openpyxl",
]
posit = [
  "rsconnect-python",
]

[project.urls]
Home = "https://github.com/rabstejnek/deduper"
Changes = "https://github.com/rabstejnek/deduper/blob/main/HISTORY.md"
"Issue Tracker" = "https://github.com/rabstejnek/deduper/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "RUF"]
ignore = ["E501", "B904", "B007", "S308", "S113", "S314"]
unfixable = ["F401", "F841"]

[tool.ruff.isort]
known-first-party = ["deduper"]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

[tool.coverage.run]
omit = [
  "./build/",
  "./tests/*",
  "./venv/*"
]
